# soupty

./: LICENSE  README.md  package-lock.json  package.json  requirement.md  system.md  tsconfig.json
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/(main)/: layout.tsx
app/(webview)/: layout.tsx
app/clip/: page.tsx
app/live/: layout.tsx  page.tsx
app/pending/: page.tsx
app/splash/: page.tsx
common/components/: app-tracker.tsx  global-event-provider.tsx  global-popover-provider.tsx
common/context/: pagination.ts
common/hooks/: api-state.ts  app-version.ts  auto-scroll.ts  debounce-state.ts  emoji-chat-integration.ts  index.ts  ipc-event-listener.ts  modal.ts  queries-param.ts  query-param.ts
common/stores/: chat-event-store.ts  confirm-modal-store.ts  (+7 more)
constants/: api.ts  app.ts  chat-colors.ts  events.ts  index.ts  ipc-events.ts  route.ts  toast.ts
src-tauri/: .gitignore  Cargo.toml  tauri.ai.conf.json  tauri.ai.windows.conf.json  tauri.conf.json  tauri.light.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: schema.sql
src-tauri/src/: lib.rs  sentiment_analyzer.rs  setup.rs  state.rs
src-tauri/src/commands/: broadcast_session.rs  channel.rs  chat_history.rs  csv_export.rs  main_controller.rs  mod.rs  reports.rs  reset_app.rs  soop_api.rs  splash.rs  utils.rs
src-tauri/src/controllers/: addon_manager.rs  config.rs  constants.rs  donation_timer.rs  event_bus.rs  main_controller.rs  metadata_manager.rs  mod.rs  scheduler.rs  system_initializer.rs  task_scheduler.rs  timer_manager.rs
src-tauri/src/models/: connect.rs  events.rs  mod.rs  reports.rs
src-tauri/src/services/: event_mapper.rs  event_name.rs  mod.rs
src-tauri/src/services/addons/: default_ui.rs  interface.rs  mod.rs
src-tauri/src/services/addons/data_enrichment/: enrichment_processor.rs  mod.rs  token_analyzer.rs
src-tauri/src/services/addons/db_logger/: buffer.rs  constants.rs  event_handlers.rs  mod.rs  session_manager.rs  user_flag.rs
src-tauri/src/services/ai/: mod.rs  sentiment_analyzer.rs
src-tauri/src/services/csv_exporter/: csv_exporter.rs  csv_schemas.rs  mod.rs
src-tauri/src/services/db/: actor.rs  commands.rs  mod.rs  service.rs
src-tauri/src/services/db/actor/: handlers.rs  initialization.rs  mod.rs
src-tauri/src/services/event_mapper/: constants.rs  donation_correlator.rs  mod.rs
src-tauri/src/services/stats/: active_chatter_ranking_stats.rs  active_viewer_stats.rs  chat_per_minute_stats.rs  core_stats_service.rs  interface.rs  lol_stats.rs  mod.rs  models.rs  sentiment_stats.rs  stats_trait.rs  word_count_stats.rs
src-tauri/src/services/stats/matrix/: active_chatter_ranking.rs  active_viewer.rs  chat_per_minute.rs  lol.rs  mod.rs  sentiment.rs  word_count.rs
src-tauri/src/util/: hangul.rs  mod.rs  reports.rs
types/: app.ts  badge.ts  blueprint.ts  chat.ts  event.ts  index.ts  soop.ts
(+343 files in other folders)
