[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
ort = { version = "=2.0.0-rc.10" }
ndarray = "0.16.1"
tokenizers = "0.21.1"
anyhow = "1.0.98"
soup-sdk = "0.1.5"
rusqlite = { version = "0.36.0", features = ["bundled", "functions"] }
tokio = "1.45.1"
hangul = "0.1.3"
async-trait = "0.1.88"
chrono = { version = "0.4.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic"] }
