[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
ai = ["dep:ort", "dep:ndarray"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["macos-private-api"] }
tauri-plugin-log = "2.0.0-rc"
ort = { version = "=2.0.0-rc.10", optional = true }
ndarray = { version = "0.16.1", optional = true }
tokenizers = "0.21.1"
anyhow = "1.0.98"
rusqlite = { version = "0.36.0", features = ["bundled", "functions"] }
tokio = "1.45.1"
hangul = "0.1.3"
async-trait = "0.1.88"
chrono = { version = "0.4.4", features = ["serde"] }
uuid = {version = "1.17.0", features = ["v4"] }
soup-sdk = "=0.1.99"
lindera = { version ="0.44.1", features = ["ko-dic"] }
lazy_static = "1.5.0"
csv = "1.3"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
dotenvy_macro = "0.15.7"

[target.'cfg(windows)'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic"], optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
